add_library (test_like test_like.cpp)
add_library (database database.cpp database_iterator.cpp)
add_library (engine engine.cpp)
add_library (external_index external_index.cpp)
add_library (group group.cpp group_iterator.cpp)
add_library (groups groups.cpp)
add_library (internal_index internal_index.cpp)
add_library (lexer lexer.cpp)
add_library (parser parser.cpp)
add_library (record record.cpp)
add_executable (main main.cpp)
add_executable (client client.cpp)
add_executable (server server.cpp)
target_link_libraries (main engine database external_index groups group internal_index parser lexer record test_like)
target_link_libraries (server engine database external_index groups group internal_index parser lexer record test_like)
